--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,10 +12,9 @@
     - ~/Work
 
 - shell:
-#  - [git submodule update --init --recursive, Installing submodules]
   - echo "hey you guys"
   - 
-    command: ./test.zsh
+    command: ./setup_homebrew.zsh
     stdout: true
     stderr: true
 
