Add zshenv with exits(), and link with Dotbot

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,7 +6,8 @@
 
 - link:
     ~/.zshrc:
-    ~/.gitconfig: 
+    ~/.zshenv:
+    ~/.gitconfig:
     ~/.config/bat:
       create: true
       path: config/bat
