--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,8 +16,9 @@
     - ~/Work
 
 - shell:
-  - 
-    command: ./setup_homebrew.zsh
+  - command: ./setup_homebrew.zsh
     stdout: true
     stderr: true
-
+  - command: ./setup_zsh.zsh
+    stdout: true
+    stderr: true
